fix color input field on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -222,3 +222,10 @@ nav .active li {
 .ant-select-focused {
   border: 1px solid #1d6f2b;
 } */
+
+@media screen and (max-width: 665px) {
+  .ant-space {
+    display: grid !important;
+    grid-template-columns: 1fr 1fr;
+  }
+}
